# VADS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  railway.toml
.railway/: beat.json  frontend.json  worker.json
alembic/versions/: 20260717_0001_document_core.py  20260717_0002_document_pipeline.py  20260718_0003_ai_orchestration.py  20260718_0004_product_api.py  20260718_0005_regulatory_change_vertical_slice.py  20260718_0006_auth_tenant_security.py
app/: __init__.py  main.py  seed_demo_accounts.py
app/api_aggregation/: __init__.py  contracts.py  endpoints.py  models.py  router.py  schemas.py  service.py
app/chat/: __init__.py  citations.py  model_router.py  models.py  qa_pipeline.py  router.py  schemas.py  service.py  source_validation.py
app/chunking/: __init__.py  models.py  reader.py  repository.py  service.py
app/citations/: __init__.py  models.py  reader.py  repository.py  schemas.py  validator.py
app/common/: __init__.py  contracts.py
app/config/: __init__.py  celery_app.py  database.py  settings.py
app/controller/: __init__.py
app/data/: 70_2025_ND-CP_577816.docx
app/documents/: __init__.py  interfaces.py  models.py  router.py  schemas.py  service.py
app/docx_rag/: __init__.py  (+8 more)
docs/: api-catalog.md  authentication-authorization.md  deploy-railway.md  regulatory-change-architecture.md
frontend/: Caddyfile.railway  Dockerfile.railway  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate_regulatory_demo_documents.py  test_docx_rag.py
(+196 files in other folders)
