[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "vads-backend"
version = "0.1.0"
description = "VADS modular-monolith backend for document analysis"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.14,<2",
    "boto3>=1.39,<2",
    "celery[redis]>=5.4,<6",
    "fastapi>=0.115,<1",
    "pgvector>=0.3,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "PyMuPDF>=1.24,<2",
    "python-docx>=1.1,<2",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy>=2.0.40,<2.1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
ocr = [
    "paddleocr==3.3.0",
]
test = [
    "httpx>=0.27,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["app/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    # The explicit str+Enum form is part of the public contract in the brief.
    "UP042",
    # Generic[T] remains clearer for SQLAlchemy repositories than PEP 695 here.
    "UP046",
]
